force-app/main/default/objects/pymtTest__Invoice__c/pymtTest__Invoice__c.object-meta.xml
<CustomObject>
    <description>Represents an invoice for payment, linked to Account and Order</description>
    <label>Invoice</label>
    <nameField>
        <displayFormat>INV-{0000000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>