force-app/main/default/objects/pymtTest__Invoice__c/fields/pymtTest__Account__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account associated with this invoice</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>