force-app/main/default/objects/pymtTest__Invoice__c/fields/pymtTest__Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Amount_Paid__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total amount paid towards this invoice</description>
    <label>Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>