force-app/main/default/objects/pymtTest__Invoice__c/fields/pymtTest__Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Balance_Due__c</fullName>
    <description>Outstanding balance on this invoice (Total Amount - Amount Paid)</description>
    <formula>pymtTest__Total_Amount__c - pymtTest__Amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>