force-app/main/default/objects/pymtTest__Invoice__c/fields/pymtTest__Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Invoice_Date__c</fullName>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>