force-app/main/default/objects/pymtTest__Invoice__c/fields/pymtTest__Order__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The order associated with this invoice</description>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>