force-app/main/default/objects/pymtTest__Invoice__c/fields/pymtTest__Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Payment_Gateway__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The payment gateway to use for processing this invoice</description>
    <label>Payment Gateway</label>
    <referenceTo>pymtTest__Payment_Gateway__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>