force-app/main/default/objects/pymtTest__Invoice__c/fields/pymtTest__Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Retry_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of payment retry attempts made for this invoice</description>
    <label>Retry Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>