force-app/main/default/objects/pymtTest__Invoice__c/fields/pymtTest__Scheduled_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Scheduled_Payment_Date__c</fullName>
    <description>Date when the automatic payment should be processed</description>
    <label>Scheduled Payment Date</label>
    <type>Date</type>
</CustomField>